[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crispr"
version = "0.3.0"
description = "Fast AST-based mutation testing for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "crispr contributors" }]
dependencies = [
    "pathspec>=1.1.1",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[project.scripts]
crispr = "crispr.cli:app"

[tool.setuptools.packages.find]
include = ["crispr*"]
